<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_musics"
    android:id="@+id/rlMusicsDialog">


    <Button
        android:id="@+id/btnMusicsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_aqua"
        android:clickable="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:text="@string/musics"
        android:textAlignment="center"
        android:textColor="@color/txt_aqua_button"
        android:textSize="@dimen/text_size_buttons"
        android:layout_marginTop="@dimen/marginTop_dialogTitleButton" />

    <ToggleButton
        android:id="@+id/tbNoMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMusicsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_topDialogButton"
        android:background="@drawable/bg_button_purple"
        android:checked="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/no_music"
        android:textOn="@string/no_music"
        android:textSize="@dimen/text_size_buttons" />

    <ToggleButton
        android:id="@+id/tbFerambie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbNoMusic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/ferambie"
        android:textOn="@string/ferambie"
        android:textSize="@dimen/text_size_buttons" />

    <ToggleButton
        android:id="@+id/tbHorrorMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbFerambie"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/horror_music"
        android:textOn="@string/horror_music"
        android:textSize="@dimen/text_size_buttons" />

</RelativeLayout>