<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".OptionsActivity">

    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/margins_topRightButton"
        android:layout_marginTop="@dimen/margins_topRightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_cancel" />

    <Button
        android:id="@+id/btnOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_title"
        android:background="@drawable/bg_button_white"
        android:clickable="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:text="@string/options"
        android:textAlignment="center"
        android:textColor="@color/txt_white_button"
        android:textSize="@dimen/text_size_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btnOptions"
        android:layout_marginBottom="@dimen/marginBottom_llButtons"
        android:layout_marginTop="@dimen/marginTop_llButtons"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptions">


        <Button
            android:id="@+id/btnMusics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_aqua"
            android:fontFamily="@font/almendra_bold"
            android:paddingBottom="@dimen/paddingBottom_buttons"
            android:text="@string/musics"
            android:textAlignment="center"
            android:textColor="@color/txt_aqua_button"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/btnSounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_betweenLlButtons"
            android:background="@drawable/bg_button_aqua"
            android:fontFamily="@font/almendra_bold"
            android:paddingBottom="@dimen/paddingBottom_buttons"
            android:text="@string/sounds"
            android:textAlignment="center"
            android:textColor="@color/txt_aqua_button"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/btnControls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_betweenLlButtons"
            android:background="@drawable/bg_button_aqua"
            android:fontFamily="@font/almendra_bold"
            android:paddingBottom="@dimen/paddingBottom_buttons"
            android:text="@string/controls"
            android:textAlignment="center"
            android:textColor="@color/txt_aqua_button"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/btnThemes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_betweenLlButtons"
            android:background="@drawable/bg_button_aqua"
            android:fontFamily="@font/almendra_bold"
            android:paddingBottom="@dimen/paddingBottom_buttons"
            android:text="@string/themes"
            android:textAlignment="center"
            android:textColor="@color/txt_aqua_button"
            android:textSize="@dimen/text_size_buttons" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>