<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialogs_controls"
    android:id="@+id/rlControlsDialog">


    <Button
        android:id="@+id/btnControlsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_aqua"
        android:clickable="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:text="@string/controls"
        android:textAlignment="center"
        android:textColor="@color/txt_aqua_button"
        android:textSize="@dimen/text_size_buttons"
        android:layout_marginTop="@dimen/marginTop_dialogTitleButton" />

    <ToggleButton
        android:id="@+id/tbButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnControlsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_topDialogButton"
        android:background="@drawable/bg_button_purple"
        android:checked="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/button"
        android:textOn="@string/button"
        android:textSize="@dimen/text_size_buttons" />

    <ToggleButton
        android:id="@+id/ivSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:checked="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/swipe"
        android:textOn="@string/swipe"
        android:textSize="@dimen/text_size_buttons" />
</RelativeLayout>