<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivExOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/margins_topRightButton"
        android:layout_marginTop="@dimen/margins_topRightButton"
        android:src="@drawable/btn_ex_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnMusicsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_title"
        android:src="@drawable/txt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/almendra_bold"
            android:paddingBottom="@dimen/paddingBottom_buttons"
            android:text="@string/new_game"
            android:textAlignment="center"
            android:textColor="@color/txt_white_button"
            android:textSize="@dimen/text_size_buttons"
            app:srcCompat="@drawable/bg_button_white" />

        <Button
            android:id="@+id/btnGameMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_betweenLlButtons"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/almendra_bold"
            android:paddingBottom="@dimen/paddingBottom_buttons"
            android:text="@string/game_modes"
            android:textAlignment="center"
            android:textColor="@color/txt_white_button"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/btnOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_betweenLlButtons"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/almendra_bold"
            android:paddingBottom="@dimen/paddingBottom_buttons"
            android:text="@string/options"
            android:textAlignment="center"
            android:textColor="@color/txt_white_button"
            android:textSize="@dimen/text_size_buttons" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>